--- a/style.css
+++ b/style.css
@@ -143,9 +143,11 @@ header.scrolled {
     width: 100%;
     height: 100%;
     /* Use a high-quality placeholder or gradient */
-    background-color: #c99d73;
+    background-image: url('img/background.webp');
+    background-size: cover;
+    background-position: center;
     z-index: -2;
-    filter: grayscale(20%) contrast(110%);
+    filter: grayscale(80%) contrast(90%) blur(2px) brightness(0.7);
 }
 
 .hero-overlay {
